fix: tempban broadcast filler, gui item-lock, add tempmute + banhistory mute entries