@@ -25,10 +25,13 @@ public final class TempBanCommand implements CommandExecutor, TabCompleter {
 
     @Override
     public boolean onCommand(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String[] args) {
+        if (!sender.hasPermission("xdtils.tempban")) {
+            sender.sendMessage(MessageUtil.noPermission(label));
+            return true;
+        }
+
         if (args.length < 2) {
-            sender.sendMessage(MessageUtil.prefixed(
-                "<gray>Benutzung: " + MessageUtil.command("tempban") + "<gray> <spieler> <zeit> [grund]</gray>\n"
-                + "<gray>Zeitformate: <#86EFAC>10s</#86EFAC><gray>, <#86EFAC>5m</#86EFAC><gray>, <#86EFAC>2h</#86EFAC><gray>, <#86EFAC>3d</#86EFAC><gray>, <#86EFAC>1w</#86EFAC>"));
+            sender.sendMessage(MessageUtil.tempBanUsage());
             return true;
         }
 
@@ -37,8 +40,7 @@ public final class TempBanCommand implements CommandExecutor, TabCompleter {
         long durationMs = BanManager.parseDuration(durationStr);
 
         if (durationMs <= 0) {
-            sender.sendMessage(MessageUtil.prefixed(
-                "<gray>Ungültige Zeitangabe: <#F87171>" + durationStr + "</#F87171><gray>. Beispiel: <#86EFAC>1h</#86EFAC><gray>, <#86EFAC>30m</#86EFAC><gray>, <#86EFAC>7d</#86EFAC>"));
+            sender.sendMessage(MessageUtil.tempBanInvalidDuration(durationStr));
             return true;
         }
 
@@ -62,9 +64,13 @@ public final class TempBanCommand implements CommandExecutor, TabCompleter {
             target.kick(MessageUtil.tempBanScreen(reason, actorName, BanManager.formatDuration(durationMs)));
         }
 
-        // Broadcast
+        // Broadcast nur an Staff (xdtils.staff) + Konsole
         String durationFormatted = BanManager.formatDuration(durationMs);
-        Bukkit.getServer().sendMessage(MessageUtil.tempBanBroadcast(targetName, actorName, reason, durationFormatted));
+        Bukkit.broadcast(MessageUtil.tempBanBroadcast(targetName, actorName, reason, durationFormatted), "xdtils.staff");
+        // Zusätzlich an alle Spieler (ohne Permission-Filter) falls gewünscht:
+        Bukkit.getOnlinePlayers().stream()
+            .filter(p -> !p.hasPermission("xdtils.staff"))
+            .forEach(p -> p.sendMessage(MessageUtil.tempBanBroadcast(targetName, actorName, reason, durationFormatted)));
         return true;
     }
 
@@ -77,7 +83,7 @@ public final class TempBanCommand implements CommandExecutor, TabCompleter {
                 .collect(Collectors.toList());
         }
         if (args.length == 2) {
-            return Arrays.asList("10m", "30m", "1h", "6h", "12h", "1d", "3d", "7d", "14d", "30d")
+            return List.of("10m", "30m", "1h", "6h", "12h", "1d", "3d", "7d", "14d", "30d")
                 .stream().filter(t -> t.startsWith(args[1])).collect(Collectors.toList());
         }
         if (args.length == 3) {
